1. Обнуление дерева после нахождения элемента 2. Доработал описание найденного объекта при выводе 3. Добавил меню "О программе" с небольшим описанием

--- a/src/UI/FXML/main.fxml
+++ b/src/UI/FXML/main.fxml
@@ -26,7 +26,7 @@
         </Menu>
         <Menu text="О программе">
             <items>
-                <MenuItem text="Лол" />
+                <MenuItem onAction="#handleAboutAppAction" text="О программе" />
                 <SeparatorMenuItem />
                 <MenuItem onAction="#handleAboutAction" text="Об авторах" />
             </items>
