--- a/src/UI/FXML/mainForm.fxml
+++ b/src/UI/FXML/mainForm.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Line?>
 
-<VBox id="mainBox" alignment="TOP_CENTER" spacing="4" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.Controller.MainFormController">
+<VBox fx:id="mainBox" alignment="TOP_CENTER" spacing="4" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.Controller.MainFormController">
     <MenuBar id="menuBar"> <!--onKeyPressed="#handleKeyInput"-->
         <Menu text="Файл">
             <items>
